# uuid-rs.nvim

./: Cargo.toml  Makefile  README.md  build.lua
plugin/: uuidrsnvim.vim
src/: uuid-nvim.rs
