[package]
name = "uuid-rs-nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs = { version = "0.6.0", features = ["use_tokio"] }
tokio = "1.35.0"
async-trait = "0.1.74"
rmpv = "1.0.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "uuid-nvim"
path = "src/uuid-nvim.rs"
